force-app/main/default/objects/FINS_RelationshipsAndControllers__c/FINS_RelationshipsAndControllers__c.object-meta.xml
<CustomObject>
    <label>Relationships and Controllers</label>
    <nameField>
        <label>Relationships and Controllers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships and Controllers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>