force-app/main/default/objects/FINS_RelationshipsAndControllers__c/fields/FINS_CIB_Authorized_Signer_for__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_Authorized_Signer_for__c</fullName>
    <label>Authorized Signer for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Execution Services</fullName>
            </value>
            <value>
                <fullName>Convertibles</fullName>
            </value>
            <value>
                <fullName>Corporate Access</fullName>
            </value>
            <value>
                <fullName>Corporate Insights</fullName>
            </value>
            <value>
                <fullName>Credit Default Swaps</fullName>
            </value>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>Equity Swaps</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
            <value>
                <fullName>Fixed Income Capital Raising</fullName>
            </value>
            <value>
                <fullName>Fund Linked Products</fullName>
            </value>
            <value>
                <fullName>FX Hedging Strategies</fullName>
            </value>
            <value>
                <fullName>FX NDF</fullName>
            </value>
            <value>
                <fullName>FX Options</fullName>
            </value>
            <value>
                <fullName>FX Products</fullName>
            </value>
            <value>
                <fullName>Industry Experience</fullName>
            </value>
            <value>
                <fullName>Interest Rate Swaps</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>Prime Services</fullName>
            </value>
            <value>
                <fullName>Private Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>