force-app/main/default/objects/FINS_RelationshipsAndControllers__c/fields/FINS_CIB_Related_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_Related_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships and Controllers (Related Entity Name)</relationshipLabel>
    <relationshipName>Relationships_and_Controllers1</relationshipName>
    <type>Lookup</type>
</CustomField>