force-app/main/default/objects/FINS_RelationshipsAndControllers__c/fields/FINS_CIB_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Ultimate Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
            <value>
                <fullName>KYC Associate</fullName>
            </value>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Trustor</fullName>
            </value>
            <value>
                <fullName>Investment Manager</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>